# tg-timetable-agent

./: .env.example  .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
c_src/: calculation.c  calculation.h
docs/: DOC.md
src/: libs.py  main.py  test.py
src/services/: spbu_api.py
